--- a/public/css/book-preview.css
+++ b/public/css/book-preview.css
@@ -61,8 +61,8 @@ span.reference a:hover{
 	flex-wrap: wrap;
 }
 
+/* .booklet .page-content .images-content,*/
 .booklet .page-content,
-.booklet .page-content .img-content,
 .booklet .page-content .title-content {
 	width: 100%;
 	height: 86%;
@@ -72,8 +72,31 @@ span.reference a:hover{
 	justify-content: center;
 }
 
-.booklet .page-content img {
+.booklet .page-content .images-content {
 	width: 100%;
+	height: 99%;
+	align-items: center;
+	flex-wrap: wrap;
+	justify-content: center;
+	flex-grow: 1;
+}
+
+.booklet .page-content img {
+	max-width: 100%;
+	max-height: 90%;
+	object-fit: contain;
+}
+
+.booklet .page-content img.nano {
+	max-height: 82%;
+}
+
+.booklet .page-content img.mini {
+	max-height: 86%;
+}
+
+.booklet .page-content img.full {
+	max-height: 94%;
 }
 
 .booklet .page-header,
@@ -147,16 +170,30 @@ span.reference a:hover{
 	opacity:0.8;
 }
 
-.booklet .img-title {
+.booklet .img-title,
+.booklet .img-title-nano,
+.booklet .img-title-mini,
+.booklet .img-title-full {
 	/* font-size: large; */
 	font-weight: bold;
 	text-decoration: underline;
 	text-align: center;
-	min-height: 15px;
+	height: 10%;
 	text-overflow: ellipsis;
 	overflow: hidden;
 	font-size: 1vw;
-	height: 1.4vw;
+}
+
+.booklet .img-title-nano {
+	height: 18%;
+}
+
+.booklet .img-title-mini {
+	height: 14%;
+}
+
+.booklet .img-title-full {
+	height: 6%;
 }
 
 .book_wrapper{
@@ -171,6 +208,10 @@ span.reference a:hover{
 
 .h-33 {
 	height: 33%;
+}
+
+.w-33 {
+	width: 33%;
 }
 
 #mybook-slider {
