--- a/public/css/book-preview.css
+++ b/public/css/book-preview.css
@@ -61,6 +61,9 @@ span.reference a:hover{
 	flex-wrap: wrap;
 }
 
+.booklet .h-100 {
+	height: 100% !important;
+}
 /* .booklet .page-content .images-content,*/
 .booklet .page-content,
 .booklet .page-content .title-content {
@@ -74,29 +77,61 @@ span.reference a:hover{
 
 .booklet .page-content .images-content {
 	width: 100%;
-	height: 99%;
+	height: 100%;
 	align-items: center;
 	flex-wrap: wrap;
 	justify-content: center;
 	flex-grow: 1;
 }
 
-.booklet .page-content img {
-	max-width: 100%;
-	max-height: 90%;
+/* .booklet .img-title,
+.booklet .img-title-nano,
+.booklet .img-title-mini,
+.booklet .img-title-full { */
+
+.booklet .img-title {
+	/* font-size: large; */
+	font-weight: bold;
+	text-decoration: underline;
+	text-align: center;
+	height: 6%;
+	text-overflow: ellipsis;
+	overflow: hidden;
+	font-size: 1vw;
+}
+
+.booklet .h-50 .img-title {
+	height: 10%;
+}
+
+.booklet .h-33 .img-title {
+	height: 13%;
+	font-size: 0.7vw;
+}
+
+.booklet .h-25 .img-title {
+	height: 13%;
+	font-size: 0.6vw;
+}
+
+.booklet .img-container {
+	width: 100%;
+	height: 94%;
 	object-fit: contain;
 }
 
-.booklet .page-content img.nano {
-	max-height: 82%;
+.booklet .h-50 .img-container {
+	height: 90%;
 }
 
-.booklet .page-content img.mini {
-	max-height: 86%;
+.booklet .h-33 .img-container,
+.booklet .h-25 .img-container {
+	height: 87%;
 }
 
-.booklet .page-content img.full {
-	max-height: 94%;
+.booklet .page-content .img-container img {
+	max-width: 100%;
+	max-height: 100%;
 }
 
 .booklet .page-header,
@@ -168,32 +203,6 @@ span.reference a:hover{
 	-webkit-box-shadow:0px -1px 1px #fff;
 	box-shadow:0px -1px 1px #fff;
 	opacity:0.8;
-}
-
-.booklet .img-title,
-.booklet .img-title-nano,
-.booklet .img-title-mini,
-.booklet .img-title-full {
-	/* font-size: large; */
-	font-weight: bold;
-	text-decoration: underline;
-	text-align: center;
-	height: 10%;
-	text-overflow: ellipsis;
-	overflow: hidden;
-	font-size: 1vw;
-}
-
-.booklet .img-title-nano {
-	height: 18%;
-}
-
-.booklet .img-title-mini {
-	height: 14%;
-}
-
-.booklet .img-title-full {
-	height: 6%;
 }
 
 .book_wrapper{
